[tool.poetry]
name = "brei"
version = "0.1.0"
description = "A minimal build system."
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache 2"
readme = "README.md"
packages = []

[tool.poetry.scripts]
brei = "brei.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.6.0"
rich-argparse = "^1.3.0"
argh = "^0.30.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
hypothesis = "^6.88.1"
mypy = "^1.6.1"
pytest-asyncio = "^0.21.1"
deadcode = "^2.2.2"
pytest-timeout = "^2.2.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
packages = ["brei"]

[[tool.brei.task]]
name = "test"
requires = ["#coverage-report", "#mypy"]

[[tool.brei.task]]
description = "Print coverage info"
name = "coverage-report"
requires = ["coverage.xml"]
script = "coverage report"

[[tool.brei.task]]
description = "Write coverage report to XML"
creates = ["coverage.xml"]
requires = [".coverage"]
script = "coverage xml"

[[tool.brei.task]]
creates = [".coverage"]
description = "Run tests"
script = "coverage run --source=brei -m pytest"

[[tool.brei.task]]
name = "mypy"
description = "The MyPy static type checker"
script = "mypy"

